--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
