--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-route-53": "^3.716.0",
     "@aws-sdk/client-s3": "^3.717.0",
     "@radix-ui/react-slot": "^1.1.1",
     "aws-sdk": "^2.1692.0",
